--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "@angular/core": "~2.4.10",
     "@angular/forms": "~2.4.10",
     "@angular/http": "~2.4.10",
-    "@angular/material": "^2.0.0-beta.2",
     "@angular/platform-browser": "~2.4.10",
     "@angular/platform-browser-dynamic": "~2.4.10",
     "@angular/platform-server": "~2.4.10",
@@ -61,6 +60,7 @@
     "@angularclass/hmr": "~1.2.2",
     "@angularclass/hmr-loader": "~3.0.2",
     "core-js": "^2.4.1",
+    "express": "^4.15.2",
     "foundation-sites": "^6.3.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
